project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: broker-service
                port:
                  number: 8080
